Collapsable debug view; fix pub links

--- a/public/static/css/eswiki.css
+++ b/public/static/css/eswiki.css
@@ -39,4 +39,10 @@ pre {
 a {
     text-decoration: underline !important;
 }
-td { vertical-align: top; }
+summary {
+    display: list-item; /* ensure the disclosure triangle is shown */
+    cursor: pointer;
+}
+summary h3 {
+    display: inline;
+}
